--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,98 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>RokuAngular</title>
+  <title>Ukor Remote</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    @-webkit-keyframes spin {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    @-moz-keyframes spin {
+      0% {
+        -moz-transform: rotate(0deg);
+      }
+      100% {
+        -moz-transform: rotate(360deg);
+      }
+    }
+
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    #preloader {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1003;
+      background: #490A3D;
+    }
+
+    #preloader>div {
+      display: block;
+      position: relative;
+      left: 50%;
+      top: 50%;
+      width: 75px;
+      height: 75px;
+      margin: -55px 0 0 -55px;
+      border-radius: 50%;
+      border: 2px solid transparent;
+      border-top-color: white;
+      transform: translate3d(0, 0, 0);
+      -webkit-animation: spin 2s linear infinite;
+      animation: spin 2s linear infinite;
+    }
+
+    #preloader>div:before {
+      content: "";
+      position: absolute;
+      top: 5px;
+      left: 5px;
+      right: 5px;
+      bottom: 5px;
+      border-radius: 50%;
+      border: 3px solid transparent;
+      border-top-color: white;
+      -webkit-animation: spin 3s linear infinite;
+      animation: spin 3s linear infinite;
+    }
+
+    #preloader>div:after {
+      content: "";
+      position: absolute;
+      top: 15px;
+      left: 15px;
+      right: 15px;
+      bottom: 15px;
+      border-radius: 50%;
+      border: 3px solid transparent;
+      border-top-color: white;
+      -webkit-animation: spin 1.5s linear infinite;
+      animation: spin 1.5s linear infinite;
+    }
+  </style>
 </head>
 <body>
   <app-root>Loading...</app-root>
+  <div id="preloader">
+    <div></div>
+  </div>
 </body>
 </html>
